# mnist-data-handler

./: .gitignore  CMakeLists.txt  CUDA_Arch.props  Makefile  README.md  benchmark_log.txt  benchmark_results.csv  benchmark_suite.cu  build_final.bat  build_log.txt  build_log_p9.txt  build_log_v2.txt  calculate_baseline.cpp  check_stats.cpp  compare_cmve.cu  compare_cmve_full.cu  compare_gmc.cu  compare_lincmb.cu  compare_slls.cu  compare_slls_full.cu  compile_log.txt  debug_bgs.cu  main.cpp  run_benchmark_suite.bat  run_benchmarks.cu  run_compare.bat  run_compare_cmve.bat  run_compare_cmve_full.bat  run_compare_full.bat  run_compare_gmc.bat  run_compare_lincmb.bat  run_debug_bgs.bat  run_verify_all_parity.bat  run_verify_amvi.bat  run_verify_arls.bat  run_verify_cmve.bat  run_verify_gmc.bat  run_verify_hybrid.bat  run_verify_knn_parity.bat  run_verify_lincmb.bat  (+28 more)
ImputingLibrary/: CUDA_arch.props  ImputingLibrary.sln  ImputingLibrary.vcxproj  cli_parser.hpp  convert_fp16.cu  cpu_results.csv  cuda_bin_io.hpp  experiment_runner.hpp  logger.hpp  main.cpp  run_experiments.cpp
data_lib/: data_lib.vcxproj  data_lib.vcxproj.filters  gpu_mimic.hpp
dataset_lib/: cuda_bin_io.cpp  cuda_bin_io.hpp  dataset.cu  dataset.hpp  dataset_lib.vcxproj  dataset_lib.vcxproj.filters
imputation_lib/: i_imputer.hpp  iknn_impute.cu  imputation_lib.vcxproj  imputation_lib.vcxproj.filters  knn_impute.cu  lls_impute.cu  local_impute_impl.cu  ls_impute.cu  ls_workspace.cu  parity_checker.hpp  sknn_impute.cu  sknn_impute.cuh  svd_impute.cu  svd_workspace.cu  svd_workspace.cuh
include/: data.hpp  (+1 more)
(+87 files in other folders)
